Fixed layout issue

--- a/src/assets/stylesheets/project/_delius.scss
+++ b/src/assets/stylesheets/project/_delius.scss
@@ -7,6 +7,10 @@ header {
   z-index: 9999;
 }
 
+.govuk-width-container {
+  margin: 0;
+}
+
 .sub-header {
   position: fixed;
   display: block;
